objects/SFDC_Industry_Assessment_Exclude__mdt.object
<CustomObject>
    <fields>
        <fullName>Controlling_Field__c</fullName>
        <label>Controlling Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Controlling_Value__c</fullName>
        <label>Controlling Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exclude_Value__c</fullName>
        <label>Exclude Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Industry_Assessment_Question__c</fullName>
        <label>SFDC Industry Assessment Question</label>
        <referenceTo>SFDC_Industry_Assessment_Question__mdt</referenceTo>
        <relationshipLabel>SFDC Industry Assessment Excludes</relationshipLabel>
        <relationshipName>SFDC_Industry_Assessment_Excludes</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <label>SFDC Industry Assessment Exclude</label>
    <pluralLabel>SFDC Industry Assessment Excludes</pluralLabel>
</CustomObject>